src/tests/krate/publish/snapshots/all__krate__publish__categories__good_categories.snap
---
source: src/tests/krate/publish/categories.rs
expression: response.into_json()
---
{
  "crate": {
    "badges": null,
    "categories": null,
    "created_at": "[datetime]",
    "description": "description",
    "documentation": null,
    "downloads": 0,
    "exact_match": false,
    "homepage": null,
    "id": "foo_good_cat",
    "keywords": null,
    "links": {
      "owner_team": "/api/v1/crates/foo_good_cat/owner_team",
      "owner_user": "/api/v1/crates/foo_good_cat/owner_user",
      "owners": "/api/v1/crates/foo_good_cat/owners",
      "reverse_dependencies": "/api/v1/crates/foo_good_cat/reverse_dependencies",
      "version_downloads": "/api/v1/crates/foo_good_cat/downloads",
      "versions": "/api/v1/crates/foo_good_cat/versions"
    },
    "max_stable_version": "1.0.0",
    "max_version": "1.0.0",
    "name": "foo_good_cat",
    "newest_version": "1.0.0",
    "recent_downloads": null,
    "repository": null,
    "updated_at": "[datetime]",
    "versions": null
  },
  "warnings": {
    "invalid_badges": [],
    "invalid_categories": [],
    "other": []
  }
}
