src/tests/krate/publish/snapshots/all__krate__publish__categories__too_many_categories.snap
---
source: src/tests/krate/publish/categories.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "invalid upload request: invalid length 6, expected at most 5 categories per crate at line 1 column 191"
    }
  ]
}
